--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.2.5",
     "core-js": "^3.22.7",
     "css-loader": "^6.7.1",
+    "howler": "^2.2.3",
     "mini-css-extract-plugin": "^2.6.0",
     "paper": "^0.12.15",
     "regenerator-runtime": "^0.13.9",
